	 (Bartosz Brachaczek) (#15329)

	Pidgin:
	* Make Pidgin more friendly to non-X11 GTK+, such as MacPorts' +no_x11
	  variant.

	Gadu-Gadu:
	* Fix a crash at startup with large contact list. Avatar support for
	  buddies will be disabled till 3.0.0. (#15226, #14305)

	IRC:
	* Support for SASL authentication.  (Thijs Alkemade, Andy Spencer)
	  (#13270)

	MSN:
	* Fix a crash when removing a user before its icon is loaded. (Mark
	  Barfield) (#15217)

	Yahoo!:
	* Fix a double-free in profile/picture loading code. (Mihai Serban)
	  (#15053)

	Plugins:
	* The Voice/Video Settings plugin supports using the sndio GStreamer
	  backends. (Brad Smith) (#14414)
	* Fix a crash in the Contact Availability Detection plugin. (Mark)
	  (#15327)
	* Make the Message Notification plugin more friendly to non-X11 GTK+,
	  such as MacPorts' +no_x11 variant.

	Windows-Specific Changes:
	* Compile with secure flags (#15290)
	* Installer downloads GTK+ Runtime and Debug Symbols more securely.
	  (#15277)
	* Updates to a number of dependencies, some of which have security
	  related fixes. (#14571, #15285, #15286)
	 * ATK 1.32.0-2
	 * Cyrus SASL 2.1.25
	 * expat 2.1.0-1
	 * freetype 2.4.10-1
	 * gettext 0.18.1.1-2
	 * Glib 2.28.8-1
	 * libpng 1.4.12-1
	 * libxml2 2.9.0-1
	 * NSS 3.13.6 and NSPR 4.9.2
	 * Pango 1.29.4-1
	 * SILC 1.1.10
	 * zlib 1.2.5-2
	* Patch libmeanwhile (sametime library) to fix crash. (Jonathan Rice)
	  (#12637)

version 2.10.6 (07/06/2012):
	Pidgin:
	* Fix a bug that requires a triple-click to open a conversation
	  window from the buddy list. (#15199)

version 2.10.5 (07/05/2012):
	libpurple:
	* Add support for GNOME3 proxy settings. (Mihai Serban) (#15054)

	Pidgin:
	* Fix a crash that may occur when trying to ignore a user who is
	  not in the current chat room. (#15139)

	MSN:
	* Fix building with MSVC on Windows (broken in 2.10.4). (Florian
	  Quèze)

	MXit:
	* Fix a buffer overflow vulnerability when parsing incoming messages